tests/cyclic_structs/error.txt
Validation error: ./tests/cyclic_structs/cyclic_structs.fae:5
 Cyclic user type `B`
  5| struct B {
            ^
Note: ./tests/cyclic_structs/cyclic_structs.fae:6
 Via field `field_b` in `B`
  6|     field_b: A
         ^^^^^^^^^^
Note: ./tests/cyclic_structs/cyclic_structs.fae:2
 Via field `field_a` in `A`
  2|     field_a: B
         ^^^^^^^^^^

Validation error: ./tests/cyclic_structs/cyclic_structs.fae:13
 Field intializer type mismatch, expected `B` but got `untyped number` instead
  13|                 field_a: 4
                      ^^^^^^^^^^
